# ipufacecard

./: LICENSE  README.md  csv_schema.md  data.json  dataMSIT.json  enrollment_numbers.csv  enrollments.csv  enrollments22.csv  enrollments22MSIT.csv  enrollments23.csv  enrollments23MSIT.csv  enrollments23_2.csv  enrollments24.csv  enrollments24MSIT.csv  enrollmentscraper.py  enrolment24.py  enroltojson.py  extract_student_image.py  filtered.csv  image_avail.txt  image_availability_report.json  main.py  proposedtree.txt  pyproject.toml  scan_image_availability.py  scrape_example.py  scraping_pipeline.md
data/: alldata.csv  alldata2.csv  ba.csv  ba_colleges.csv  bba.csv  bba_colleges.csv  bed.csv  btech.csv  btech_colleges.csv  bvoc.csv  college_data.csv  llb.csv  mba.csv  results.csv  results.json  shortcourses.csv
data/dbdata/: t.txt
