[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipuface"
version = "0.1.0"
description = "scraper for ipu ."
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pandas>=2.3.3",
    "requests>=2.28",
    "selenium>=4.38.0",
    "toml>=0.10",
]

